--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -1,1 +1,31 @@
+name: CICD
+
+on:
+  push:
+    branches: [master]
+    
+jobs:
+  build:
+    runs-on: [ubuntu-latest]
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v3
+      - name: Login to docker hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Docker Image
+        run: docker build -t shitalwakde/aws-nodes .
+      - name: Publish image to docker hub
+        run: docker push shitalwakde/aws-nodes:latest
+
+
+  deploy:
+    needs: build
+    runs-on: [aws-ec2]
+    steps:
+      - name: Pull image from Docker Hub        
+        run: docker pull shitalwakde/aws-nodes:latest
+      - name: Delete old container
+        run: docker rm -f aws-nodes-container
+      - name: Run docker container
+        run: docker run -d -p 3000:3000 --name aws-nodes-container shitalwakde/aws-nodes:latest
 
