--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -23,9 +23,9 @@ jobs:
     runs-on: [aws-ec2]
     steps:
       - name: Pull image from Docker Hub        
-        run: docker pull shitalwakde/aws-nodes:latest
+        run: docker pull shitalwakde/aws-nodes
       - name: Delete old container
         run: docker rm -f aws-nodes-container
       - name: Run docker container
-        run: docker run -d -p 3000:3000 --name aws-nodes-container shitalwakde/aws-nodes:latest
+        run: docker run -d -p 3000:3000 --name aws-nodes-container shitalwakde/aws-nodes
 
