--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: [aws-ec2]
     steps:
       - name: Pull image from Docker Hub        
-        run: docker pull shitalwakde/aws-nodes
+        run: docker pull shitalwakde/aws-nodes:latest
       - name: Delete old container
         run: docker rm -f aws-nodes-container
       - name: Run docker container
